--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -48,13 +48,15 @@
                     </div>
                 </div>
             </header>
- 
-            <section id="about" class="about_section">
-                <h1 class="paragraph"><em><u>About</u></em></h1>
-                <p class="paragraph">Content here...</p>
-            </section>
         </section>
-
+        <section id="canvas" class="canvas-container">
+            <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
+            <script type="module" src="/Monkey-Engine/main.js"></script>
+        </section>
+        <section id="about" class="about_section">
+            <h1 class="paragraph"><em><u>About</u></em></h1>
+            <p class="paragraph">Content here...</p>
+        </section>
         <main class="grid-layout">
             <section class="content">
                 <img src="PNG/PNG_car_back.png" alt="Car Image 1">
@@ -69,62 +71,6 @@
                 <img src="PNG/PNG_car_back.png" alt="Car Image 4">
             </section>
         </main class>
-
- 
-
-        <nav id="odkazy">
-            <h1 class="BOR">Links Section</h1>
-            <ul>
-                <li><a href="#about">Start</a></li>
-                <li><a href="#cenik">Price List</a></li>
-                <li><a href="#nakonec">End</a></li>
-                <li><a href="#japonec">Random Japanese</a></li>
-            </ul>
-        </nav>
-
-        <section id="cenik">
-            <h1 class="CAP">Price List</h1>
-            <ul>
-                <li>Classic____"6 dumplings, no extras"................................Price</li>
-                <li>Deluxe____"3 dumplings, 3 pancakes".......................Price</li>
-                <li>Premium__"6 pancakes"........................................Price</li>
-            </ul>
-        </section>
-
-        <table id="stůl">
-            <caption>Menu Table</caption>
-            <tr>
-                <th>Location</th>
-                <th>Time</th>
-                <th>Goulash</th>
-                <th>Pancake</th>
-                <th>Egg</th>
-                <th>Dumpling</th>
-                <th>Egg Dumpling</th>
-            </tr>
-            <tr>
-                <td>none</td>
-                <td>none</td>
-                <td>none</td>
-                <td>none</td>
-                <td>yes</td>
-                <td>yes</td>
-                <td>none</td>
-            </tr>
-            <tr>
-                <td>no</td>
-                <td>yes</td>
-                <td>yes</td>
-                <td>yes</td>
-                <td>yes</td>
-                <td>no</td>
-                <td>no</td>
-            </tr>
-        </table>
-
-        <section id="japonec">
-            <h1>Random Japanese Section</h1>
-            <img src="PNG/PNG_car_back.png" alt="Image description">
-        </section>
+        
     </body>
 </html>
