fix problikávání CharacterSprite2 v rovném skoku

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -51,7 +51,7 @@
         </section>
         <section id="canvas" class="canvas-container">
             <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
-            <script type="module" src="/Monkey-Engine/main.js"></script>
+            <script type="module" src="/Monkey-Engine/Ex102_CharS2.js"></script>
         </section>
         <section id="about" class="about_section">
             <h1 class="paragraph"><em><u>About</u></em></h1>
