--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -5,19 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game</title>
   <style>
-    body {
+     body {
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: #282c34;
+      margin: 0;
+      height: 100vh;
     }
+
     canvas {
       border: 5px solid black;
       background-color: white;
+      width: 100%;
+      height: auto;
+      max-width: 1080px;
+      max-height: 720px;
     }
   </style>
-    
-    <script type="module" src="main.js"></script>
+  <script type="module" src="Ex102_CharS2.js"></script>
 </head>
 <body>
 
