--- a/Game_01_Ledvadva/Html_test.html
+++ b/Game_01_Ledvadva/Html_test.html
@@ -23,7 +23,7 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="mainPexeso.js"></script>
+  <script type="module" src="/Game_01_Ledvadva/main.js"></script>
 </head>
 <body>
 
