--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,7 +23,7 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="Ex102_CharS2.js"></script>
+  <script type="module" src="Ex101_Sprites.js"></script>
 </head>
 <body>
 
