no more example files, dynamicSprite = SpriteDyna, new classes Rectangle and Tetragon

--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,10 +23,11 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="Ex101_Sprites.js"></script>
+  <script type="module" src="CharacterSprite1.js"></script>
+  
 </head>
 <body>
-
+  <!--nezapoměnte na v souboru odkomentovat ukázku kódu -->
   <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
 </body>
 </html>
