renaming the website

--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game</title>
+  <title>Monkey Engine</title>
   <style>
      body {
       display: flex;
@@ -23,7 +23,7 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="CharacterSprite1.js"></script>
+  <script type="module" src="Rectangle.js"></script>
   
 </head>
 <body>
