link the main website to the rest of project

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -11,16 +11,16 @@
             <header class="stick" >
                 <div id="Header_incl_links" class="link-header">
                     <div class="left">
-                        <a href="Home">
+                        <a href="DaSiHa.html">
                             <img src="PNG/PNG_logo.png" alt="Home">
                         </a> 
                     </div>
                     <div class="mid">
-                        <a href="Game01">
+                        <a href="/Game_01_Ledvadva/index.html">
                             <img src="PNG/PNG_logo _ledva.png" alt="Game 01">
                             <span class="span10px"></span>    
                         </a>
-                        <a href="Game02">
+                        <a href="/Game_02_dakynovyKoule/index.html">
                             <img src="PNG/PNG_game.png" alt="Game 02">
                             <img src="PNG/PNG_name.png" alt="Game 02">
                         </a>
@@ -48,15 +48,11 @@
                     </div>
                 </div>
             </header>
-        </section>
-        <section id="canvas" class="canvas-container">
-            <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
-            <script type="module" src="/Monkey-Engine/Ex102_CharS2.js"></script>
-        </section>
-        <section id="about" class="about_section">
-            <h1 class="paragraph"><em><u>About</u></em></h1>
-            <p class="paragraph">Content here...</p>
-        </section>
+            <section id="about" class="about_section">
+                <h1 class="paragraph"><em><u>About</u></em></h1>
+                <p class="paragraph">Content here...</p>
+            </section>
+        </section> 
         <main class="grid-layout">
             <section class="content">
                 <img src="PNG/PNG_car_back.png" alt="Car Image 1">
