--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -17,16 +17,15 @@
                     </div>
                     <div class="mid">
                         <a href="/Game_01_Ledvadva/index.html">
-                            <img src="PNG/PNG_logo _ledva.png" alt="Game 01">
+                            <img src="PNG/PNG_logo_ledva.png" alt="Game 01">
                             <span class="span10px"></span>    
                         </a>
                         <a href="/Game_02_dakynovyKoule/index.html">
-                            <img src="PNG/PNG_game.png" alt="Game 02">
-                            <img src="PNG/PNG_name.png" alt="Game 02">
+                            <img src="PNG/PNG_logo_davesBalls.png" alt="Game 02">
+
                         </a>
-                        <a href="Game03">
-                            <img src="PNG/PNG_game.png" alt="Game 03">
-                            <img src="PNG/PNG_name.png" alt="Game 03">
+                        <a href="Game03/index.html">
+                            <img src="PNG/PNG_logo_Hahahahahahahahha.png" alt="Game 03">
                         </a>
                         <a href="Game04">
                             <img src="PNG/PNG_game.png" alt="Game 04">
