prezentace a propojení mainWebsite s game03

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -24,7 +24,7 @@
                             <img src="PNG/PNG_logo_davesBalls.png" alt="Game 02">
 
                         </a>
-                        <a href="Game03/index.html">
+                        <a href="/Game_03_runner/index.html">
                             <img src="PNG/PNG_logo_Hahahahahahahahha.png" alt="Game 03">
                         </a>
                         <a href="Game04">
