--- a/Game_03_runner/index.html
+++ b/Game_03_runner/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Endless Run</h1>
     <canvas id="game"></canvas>
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </body>
 </html>
