--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     <div class="right">
-                        <a href="Settings" >
+                        <a href="/Monkey-Engine/MonkeyEngine.html" >
                             <img src="PNG/PNG_setting2.png" alt="SETTING">
                         </a>
                     </div>
