--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -3,67 +3,41 @@
     <head>
         <meta charset="UTF-8">
         <title>TitlePytle</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel = "stylesheet" href = "../Main-Website/style_DaSiHa.css" >
+        <link rel = "stylesheet" href = "../Main-Website/style_header.css" >
     </head>
     <body>
         <div id = "test"></div>
-        <section>
-            <header class="stick" >
-                <div id="Header_incl_links" class="link-header">
-                    <div class="left">
-                        <a href="DaSiHa.html">
-                            <img src="PNG/PNG_logo.png" alt="Home">
-                        </a> 
-                    </div>
-                    <div class="mid">
-                        <a href="/Game_01_Ledvadva/index.html">
-                            <img src="PNG/PNG_logo_ledva.png" alt="Game 01">
-                            <span class="span10px"></span>    
-                        </a>
-                        <a href="/Game_02_dakynovyKoule/index.html">
-                            <img src="PNG/PNG_logo_davesBalls.png" alt="Game 02">
+        <section >
+            <div id="external-Header" class = "stick"></div>
+            <script>
+                fetch('Header.html')
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById('external-Header').innerHTML = data;
+                    })
+                    .catch(error => {
+                        console.error('Error fetching HTML:', error);
+                    });
+            </script>
 
-                        </a>
-                        <a href="/Game_03_runner/index.html">
-                            <img src="PNG/PNG_logo_Hahahahahahahahha.png" alt="Game 03">
-                        </a>
-                        <a href="Game04">
-                            <img src="PNG/PNG_game.png" alt="Game 04">
-                            <img src="PNG/PNG_name.png" alt="Game 04">
-                        </a>
-                        <a href="Game05">
-                            <img src="PNG/PNG_game.png" alt="Game 05">
-                            <img src="PNG/PNG_name.png" alt="Game 05">
-                        </a>
-                        <a href="Game06">
-                            <img src="PNG/PNG_game.png" alt="Game 06">
-                            <img src="PNG/PNG_name.png" alt="Game 06">
-                        </a>
-                    </div>
-                    <div class="right">
-                        <a href="/Monkey-Engine/MonkeyEngine.html" >
-                            <img src="PNG/PNG_setting2.png" alt="SETTING">
-                        </a>
-                    </div>
-                </div>
-            </header>
             <section id="about" class="about_section">
                 <h1 class="paragraph"><em><u>About</u></em></h1>
                 <p class="paragraph">Content here...</p>
             </section>
-        </section> 
+        </section>
         <main class="grid-layout">
             <section class="content">
-                <img src="PNG/PNG_car_back.png" alt="Car Image 1">
+                <img src="PNG/car_back.png" alt="Car Image 1">
             </section>
             <section class="content">
-                <img src="PNG/PNG_car_back.png" alt="Car Image 2">
+                <img src="PNG/car_back.png" alt="Car Image 2">
             </section>
             <section class="content">
-                <img src="PNG/PNG_car_back.png" alt="Car Image 3">
+                <img src="PNG/car_back.png" alt="Car Image 3">
             </section>
             <section class="content">
-                <img src="PNG/PNG_car_back.png" alt="Car Image 4">
+                <img src="PNG/car_back.png" alt="Car Image 4">
             </section>
         </main class>
         
