cleaning of the Main-web

--- a/Main-Website/Header.html
+++ b/Main-Website/Header.html
@@ -1,7 +1,7 @@
 <header>
     <div id="Header_incl_links" class="link-header">
         <div class="left">
-            <a href="DaSiHa.html">
+            <a href="../Main-Website/DaSiHa.html">
                 <img src="../Main-Website/PNG/logo_DaSiHa.png" alt="Home">
             </a> 
         </div>
@@ -17,9 +17,9 @@
             <a href="/Game_03_runner/index.html">
                 <img src="../Main-Website/PNG/logo_runner.png" alt="Game 03">
             </a>
-            <a href="Game04">
-                <img src="../Main-Website/PNG/game.png" alt="Game 04">
-                <img src="../Main-Website/PNG/name.png" alt="Game 04">
+            <a href="/Game_04_example/index.html">
+                <img src="../Main-Website/PNG/example.png" alt="Game 04">
+                <img src="../Main-Website/PNG/game.png"    alt="Game 04">
             </a>
             <a href="Game05">
                 <img src="../Main-Website/PNG/game.png" alt="Game 05">
@@ -32,7 +32,7 @@
         </div>
         <div class="right">
             <a href="/Monkey-Engine/MonkeyEngine.html" >
-                <img src="PNG/setting2.png" alt="SETTING">
+                <img src="../Main-Website/PNG/setting2.png" alt="SETTING">
             </a>
         </div>
     </div>
