spliting and updateting the html

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -5,6 +5,7 @@
         <title>TitlePytle</title>
         <link rel = "stylesheet" href = "../Main-Website/style_DaSiHa.css" >
         <link rel = "stylesheet" href = "../Main-Website/style_header.css" >
+        <link rel = "stylesheet" href = "../Main-Website/style_GameGallery.css" >
     </head>
     <body>
         <section >
@@ -25,18 +26,18 @@
                 <p class="paragraph">Content here...</p>
             </section>
         </section>
-        <main class="grid-layout">
+        <main class="gameGallery">
             <section class="content">
-                <img src="PNG/car_back.png" alt="Car Image 1">
+                <img src="PNG/gallery_default.png" alt="Car Image 1">
             </section>
             <section class="content">
-                <img src="PNG/car_back.png" alt="Car Image 2">
+                <img src="PNG/gallery_default.png" alt="Car Image 2">
             </section>
             <section class="content">
-                <img src="PNG/car_back.png" alt="Car Image 3">
+                <img src="PNG/gallery_default.png" alt="Car Image 3">
             </section>
             <section class="content">
-                <img src="PNG/car_back.png" alt="Car Image 4">
+                <img src="PNG/gallery_default.png" alt="Car Image 4">
             </section>
         </main class>
         
