--- a/Game_01_Ledvadva/index.html
+++ b/Game_01_Ledvadva/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ledva dva </title>
-  <link rel = "stylesheet" href = "../Main-Website/style_header.css" >
+  <link rel = "stylesheet" href = "../Main-Website/style_header.css"     >
+  <link rel = "stylesheet" href = "../Main-Website/style_GameSection.css" >
+  <link rel = "stylesheet" href = "../Main-Website/style_GameGallery.css" >
   <style>
      body {
       display: block;
@@ -13,37 +15,30 @@
       background-color:#492f09;
       margin: 0;
     }
-    .gameSection {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    canvas {
-      border: 5px solid black;
-      background-color: white;
-      width: 100%;
-      height: auto;
-      max-width: 1080px;
-      max-height: 720px;
-    }
   </style>
   <script type="module" src="/Game_01_Ledvadva/main.js"></script>
 </head>
 <body>
-  <div id="external-Header" class = "stick"></div>
-      <script>
-          fetch('../Main-Website/Header.html')
-              .then(response => response.text())
-              .then(data => {
-                  document.getElementById('external-Header').innerHTML = data;
-              })
-              .catch(error => {
-                  console.error('Error fetching HTML:', error);
-              });
-      </script>
-      <div class = "gameSection">
-        <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
-      </div>
-  
+  <div id="externalCode"></div>
+  <script>
+    fetch('../Main-Website/Header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('externalCode').innerHTML = data;
+        return fetch('../Main-Website/GameSection.html');
+      })
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('externalCode').innerHTML += data;
+        return fetch('../Main-Website/GameGallery.html');
+      })
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('externalCode').innerHTML += data;
+      })
+      .catch(error => {
+        console.error('Error fetching HTML:', error);
+      });
+  </script>
 </body>
 </html>
