--- a/Main-Website/GameSection.html
+++ b/Main-Website/GameSection.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class = "gameSection">
-    <canvas id="herniRozhraní" width="1080" height="720"></canvas>
+    <canvas id="herniRozhraní" width="1920" height="1080"></canvas>
     <div class="game-Controls">
     <img src="../Main-Website/PNG/sss.png" alt="rateings" class="rateings">
     <img src="../Main-Website/PNG/fullscreen.png" alt="fullscreen" class="fullscreen" id="fullscreenButton">
@@ -14,7 +14,19 @@
   <div class = "ad-Panel">
     <!--  -->
   </div>
-</main>
-<script>
-    console.log("fullscreen stisknuto");
-</script>
+  
+  </main>
+  <script>
+    document.getElementById('fullscreenButton').addEventListener('click', function() {
+      var canvas = document.getElementById('herniRozhraní');
+      if (canvas.requestFullscreen) {
+        canvas.requestFullscreen();
+      } else if (canvas.mozRequestFullScreen) { // Firefox
+        canvas.mozRequestFullScreen();
+      } else if (canvas.webkitRequestFullscreen) { // Chrome, Safari and Opera
+        canvas.webkitRequestFullscreen();
+      } else if (canvas.msRequestFullscreen) { // IE/Edge
+        canvas.msRequestFullscreen();
+      }
+    });
+  </script>
