--- a/Game_03_runner/index.html
+++ b/Game_03_runner/index.html
@@ -7,16 +7,46 @@
     <title>Endless Run</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js"></script>
+    <link rel = "stylesheet" href = "../Main-Website/style_header.css"     >
+  <link rel = "stylesheet" href = "../Main-Website/style_GameSection.css" >
+  <link rel = "stylesheet" href = "../Main-Website/style_GameGallery.css" >
 </head>
+<style>
+    body {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color:#492f09;
+        margin: 0;
+      }
+</style>
 <body>
-    <div class = "headline" >
-        <!--
-            <h1>Endless Run</h1>
-        -->
-    </div>
-    <div class = "canvas_div">
-        <canvas id="game"  width="1080" height="720"></canvas>   
-    </div>
+    <script type="module" src="script.js"></script>
+    <div id="externalCode"></div>
+      <script>
+        function loadExternalHTML(url) {
+          return fetch(url)
+            .then(response => response.text())
+            .then(data => {
+              const tempDiv = document.createElement('div');
+              tempDiv.innerHTML = data;
+              document.getElementById('externalCode').appendChild(tempDiv);
+              const scripts = tempDiv.getElementsByTagName('script');
+              for (let script of scripts) {
+          const newScript = document.createElement('script');
+          newScript.text = script.text;
+          document.body.appendChild(newScript);
+              }
+            });
+        }
+
+        loadExternalHTML('../Main-Website/Header.html')
+          .then(() => loadExternalHTML('../Main-Website/GameSection.html'))
+          .then(() => loadExternalHTML('../Main-Website/GameGallery.html'))
+          .catch(error => {
+            console.error('Error fetching HTML:', error);
+          });
+      </script>
    
 </body>
 </html>
