silvestr nemam cas

--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,11 +23,11 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="Tetragon.js"></script>
+  <script type="module" src="../Game_01_Ledvadva/main.js"></script>
   
 </head>
 <body>
   <!--nezapoměnte na v souboru odkomentovat ukázku kódu -->
-  <canvas  id="herniRozhraní" width="1080" height="720"></canvas>
+  <canvas  id="herniRozhraní" width="1720" height="1080"></canvas>
 </body>
 </html>
