--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,7 +23,7 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="../Game_01_Ledvadva/main.js"></script>
+  <script type="module" src="../Monkey-Engine/Menu.js"></script>
   
 </head>
 <body>
