--- a/Game_02_dakynovyKoule/index.html
+++ b/Game_02_dakynovyKoule/index.html
@@ -17,10 +17,12 @@
     }
   </style>
   <script type="module" src="/Game_02_dakynovyKoule/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
   
 </head>
 <body>
   <div id="externalCode"></div>
+  <button id="cudla"></button>
   <script>
     function loadExternalHTML(url) {
           return fetch(url)
