--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,11 +23,10 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="../Monkey-Engine/Menu.js"></script>
+  <script type="module" src="../Game_01_Ledvadva/levels/00_main_hub.js"></script>
   
 </head>
 <body>
   <!--nezapoměnte na v souboru odkomentovat ukázku kódu -->
-  <canvas  id="herniRozhraní" width="1720" height="1080"></canvas>
+  <canvas  id="herniRozhraní" width="1920" height="1080"></canvas>
 </body>
-</html>
