--- a/Game_03_runner/index.html
+++ b/Game_03_runner/index.html
@@ -19,7 +19,9 @@
   <script type="module" src="/Game_03_runner/script.js"></script>
 </head>
 <body>
-  <div id="externalCode"></div>
+  <div id="externalCode">
+  <button id="button">Click Me</button>
+  </div>
   <script>
     function loadExternalHTML(url) {
           return fetch(url)
