--- a/Game_03_runner/index.html
+++ b/Game_03_runner/index.html
@@ -19,9 +19,7 @@
   <script type="module" src="/Game_03_runner/script.js"></script>
 </head>
 <body>
-  <div id="externalCode">
-  <button id="button">Click Me</button>
-  </div>
+  <div id="externalCode"></div>
   <script>
     function loadExternalHTML(url) {
           return fetch(url)
