showcase for tomorow

--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -23,7 +23,7 @@
       max-height: 720px;
     }
   </style>
-  <script type="module" src="../Monkey-Engine/CharacterSprite.js"></script>
+  <script type="module" src="../Monkey-Engine/showcase.js"></script>
   
 </head>
 <body>
