bit of an upgrade pro main stranku

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -29,15 +29,23 @@
         <main class="gameGallery">
             <section class="content">
                 <img src="PNG/gallery_default.png" alt="Car Image 1">
+                <div class="overlay">
+                    <button>Play Now</button>
             </section>
             <section class="content">
                 <img src="PNG/gallery_default.png" alt="Car Image 2">
+                <div class="overlay">
+                    <button>Play Now</button>
             </section>
             <section class="content">
                 <img src="PNG/gallery_default.png" alt="Car Image 3">
+                <div class="overlay">
+                    <button>Play Now</button>
             </section>
             <section class="content">
                 <img src="PNG/gallery_default.png" alt="Car Image 4">
+                <div class="overlay">
+                    <button>Play Now</button>
             </section>
         </main class>
         
