--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -28,26 +28,30 @@
         </section>
         <main class="gameGallery">
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="Car Image 1">
-                <div class="overlay">
-                    <button>Play Now</button>
+            <img src="PNG/gallery_default.png" alt="ŠB1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="Car Image 2">
-                <div class="overlay">
-                    <button>Play Now</button>
+            <img src="PNG/dakynpic.jpg" alt="DK1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_02_dakynovyKoule/index.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="Car Image 3">
-                <div class="overlay">
-                    <button>Play Now</button>
+            <img src="PNG/gallery_default.png" alt="HH1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="Car Image 4">
-                <div class="overlay">
-                    <button>Play Now</button>
+            <img src="PNG/gallery_default.png" alt="Car Image 4">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_04_example/index.html'">Play Now</button>
+            </div>
             </section>
-        </main class>
+        </main>
         
     </body>
 </html>
