--- a/Main-Website/GameGallery.html
+++ b/Main-Website/GameGallery.html
@@ -3,7 +3,7 @@
             <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 1">
         </section>
         <section class="content">
-            <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 2">
+            <img src="../Main-Website/PNG/dakynpic.jpg" alt="DK1">
         </section>
         <section class="content">
             <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 3">
