--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -23,7 +23,7 @@
 
             <section id="about" class="about_section">
                 <h1 class="paragraph"><em><u>About</u></em></h1>
-                <p class="paragraph">Content here...</p>
+                <p class="paragraph"><b>Welcome to our gaming website, where fun never ends! Explore a variety of exciting games. Whether you're a casual gamer or a hardcore enthusiast, there's something for everyone. Discover new worlds, compete for high scores, and enjoy endless entertainment right at your fingertips. Start playing now!</b></p>
             </section>
         </section>
         <main class="gameGallery">
