--- a/Main-Website/Header.html
+++ b/Main-Website/Header.html
@@ -45,15 +45,13 @@
                 </a>
                 <a href="/Game_04_example/index.html">
                     <img src="/Main-Website/PNG/example.png" alt="Game 04">
-                    <img src="/Main-Website/PNG/game.png"    alt="Game 04">
                 </a>
                 <a href="/Game05">
-                    <img src="/Main-Website/PNG/game.png" alt="Game 05">
-                    <img src="/Main-Website/PNG/name.png" alt="Game 05">
-                </a>
+                    <img src="/Main-Website/PNG/logo_default.png" alt="Game 05">
+              </a>
                 <a href="/Game06">
-                    <img src="/Main-Website/PNG/game.png" alt="Game 06">
-                    <img src="/Main-Website/PNG/name.png" alt="Game 06">
+                    <img src="/Main-Website/PNG/logo_default.png" alt="Game 06">
+
                 </a>
             </div>
             <div class="right">
