--- a/Main-Website/Header.html
+++ b/Main-Website/Header.html
@@ -25,10 +25,10 @@
                     <img src="/Main-Website/PNG/example.png" alt="Example Game Icon">Example Game
                 </a>
                 <a href="/Game05">
-                    <img src="/Main-Website/PNG/game.png" alt="Game 05 Icon">Game 05
+                    <img src="/Main-Website/PNG/logo_default.png" alt="Game 05 Icon">Game 05
                 </a>
                 <a href="/Game06">
-                    <img src="/Main-Website/PNG/game.png" alt="Game 06 Icon">Game 06
+                    <img src="/Main-Website/PNG/logo_default.png" alt="Game 06 Icon">Game 06
                 </a>
             </div>
 
