mainwebsite fix minor

--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -28,28 +28,36 @@
         </section>
         <main class="gameGallery">
             <section class="content">
-            <img src="PNG/gallery_default.png" alt="ŠB1">
-            <div class="overlay">
-            <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
-            </div>
+                <img src="PNG/gallery_default.png" alt="ŠB1">
+                <div class="overlay">
+                    <div class="Ledva">
+                        <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
+                    </div>
+                </div>
             </section>
             <section class="content">
-            <img src="PNG/dakynpic.jpg" alt="DK1">
-            <div class="overlay">
-            <button onclick="window.location.href='../Game_02_dakynovyKoule/hub_opener.html'">Play Now</button>
-            </div>
+                <img src="PNG/dakynpic.jpg" alt="DK1">
+                <div class="overlay">
+                    <div class="bowling">
+                        <button onclick="window.location.href='../Game_02_dakynovyKoule/hub_opener.html'">Play Now</button>
+                    </div>
+                </div>
             </section>
             <section class="content">
-            <img src="PNG/gallery_default.png" alt="HH1">
-            <div class="overlay">
-            <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
-            </div>
+                <img src="PNG/gallery_default.png" alt="HH1">
+                <div class="overlay">
+                    <div class="pes">
+                        <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
+                    </div>
+                </div>
             </section>
             <section class="content">
-            <img src="PNG/gallery_default.png" alt="Car Image 4">
-            <div class="overlay">
-            <button onclick="window.location.href='../Game_04_example/index.html'">Play Now</button>
-            </div>
+                <img src="PNG/gallery_default.png" alt="Car Image 4">
+                <div class="overlay">
+                    <div class="game4">
+                        <button onclick="window.location.href='../Game_04_example/index.html'">Play Now</button>
+                    </div>
+                </div>
             </section>
         </main>
         
