--- a/Main-Website/GameGallery.html
+++ b/Main-Website/GameGallery.html
@@ -6,7 +6,7 @@
             <img src="../Main-Website/PNG/dakynpic.jpg" alt="DK1">
         </section>
         <section class="content">
-            <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 3">
+            <img src="../Main-Website/PNG/galerie_pes.png" alt="Runner">
         </section>
         <section class="content">
             <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 4">
