--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -23,43 +23,34 @@
 
             <section id="about" class="about_section">
                 <h1 class="paragraph"><em><u>About</u></em></h1>
-                <p class="paragraph"><b>Welcome to our gaming website, where fun never ends! Explore a variety of exciting games. Whether you're a casual gamer or a hardcore enthusiast, there's something for everyone. Discover new worlds, compete for high scores, and enjoy endless entertainment right at your fingertips. Start playing now!</b></p>
+                <p class="paragraph"><b>Welcome to our gaming website, where fun never ends! Explore a variety of exciting games. Whether you're a casual gamer or a hardcore enthusiast, there's something for everyone. Discover new worlds, compete for high scores, and enjoy endless entertainment right at your fingertips. START PLAYING NOW!</b></p>
             </section>
         </section>
         <main class="gameGallery">
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="ŠB1">
-                <div class="overlay">
-                    <div class="Ledva">
-                        <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
-                    </div>
-                </div>
+            <img src="PNG/gallery_default.png" alt="ŠB1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/dakynpic.jpg" alt="DK1">
-                <div class="overlay">
-                    <div class="bowling">
-                        <button onclick="window.location.href='../Game_02_dakynovyKoule/index.html'">Play Now</button>
-                    </div>
-                </div>
+            <img src="PNG/dakynpic.jpg" alt="DK1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_02_dakynovyKoule/hub_opener.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="HH1">
-                <div class="overlay">
-                    <div class="pes">
-                        <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
-                    </div>
-                </div>
+            <img src="PNG/galerie_pes.png" alt="HH1">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
+            </div>
             </section>
             <section class="content">
-                <img src="PNG/gallery_default.png" alt="Car Image 4">
-                <div class="overlay">
-                    <div class="game4">
-                        <button onclick="window.location.href='../Game_04_example/index.html'">Play Now</button>
-                    </div>
-                </div>
+            <img src="PNG/gallery_default.png" alt="Car Image 4">
+            <div class="overlay">
+            <button onclick="window.location.href='../Game_04_example/index.html'">Play Now</button>
+            </div>
             </section>
         </main>
-        
     </body>
 </html>
