--- a/Main-Website/DaSiHa.html
+++ b/Main-Website/DaSiHa.html
@@ -28,7 +28,7 @@
         </section>
         <main class="gameGallery">
             <section class="content">
-            <img src="PNG/gallery_default.png" alt="ŠB1">
+            <img src="PNG/preview.png" alt="ŠB1">
             <div class="overlay">
             <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
             </div>
