--- a/Main-Website/GameGallery.html
+++ b/Main-Website/GameGallery.html
@@ -1,14 +1,25 @@
+<head>
+    <link rel="stylesheet" href="style_GameGallery.css">
+</head>
+
+
 <section class="gameGallery">
         <section class="content">
             <img src="../Main-Website/PNG/preview.png" alt="Car Image 1">
+            <div class="overlay">
+                <button onclick="window.location.href='../Game_01_Ledvadva/index.html'">Play Now</button>
+            </div>
         </section>
         <section class="content">
             <img src="../Main-Website/PNG/dakynpic.jpg" alt="DK1">
+            <div class="overlay">
+                <button onclick="window.location.href='../Game_02_dakynovyKoule/index.html'">Play Now</button>
+            </div>
         </section>
         <section class="content">
             <img src="../Main-Website/PNG/galerie_pes.png" alt="Runner">
-        </section>
-        <section class="content">
-            <img src="../Main-Website/PNG/gallery_default.png" alt="Car Image 4">
+            <div class="overlay">
+                <button onclick="window.location.href='../Game_03_runner/index.html'">Play Now</button>
+            </div>
         </section>
 </section>
