--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -4,29 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monkey Engine</title>
+
   <style>
-     body {
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      background: #282c34;
+      overflow: hidden;
+    }
+
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #282c34;
-      margin: 0;
-      height: 100vh;
     }
 
     canvas {
-      border: 5px solid black;
       background-color: white;
-      width: 100%;
-      height: auto;
-      max-width: 1080px;
-      max-height: 720px;
+      display: block;
     }
   </style>
-  <script type="module" src="../Game_01_Ledvadva/main.js"></script>
-  
 </head>
 <body>
-  <!--nezapoměnte na v souboru odkomentovat ukázku kódu -->
-  <canvas  id="herniRozhraní" width="1920" height="1080"></canvas>
+
+  <canvas id="herniRozhraní"></canvas>
+
+  <script>
+    const canvas = document.getElementById("herniRozhraní");
+    const ctx = canvas.getContext("2d");
+
+    const BASE_WIDTH = 1920;
+    const BASE_HEIGHT = 1080;
+
+    function resizeCanvas() {
+      const scale = Math.min(
+        window.innerWidth / BASE_WIDTH,
+        window.innerHeight / BASE_HEIGHT
+      );
+
+      canvas.width = BASE_WIDTH;
+      canvas.height = BASE_HEIGHT;
+
+      canvas.style.width = Math.floor(BASE_WIDTH * scale) + "px";
+      canvas.style.height = Math.floor(BASE_HEIGHT * scale) + "px";
+
+      ctx.imageSmoothingEnabled = false;
+    }
+
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+  </script>
+
+  <script type="module" src="../Game_01_Ledvadva/main.js"></script>
 </body>
+</html>
