--- a/Monkey-Engine/MonkeyEngine.html
+++ b/Monkey-Engine/MonkeyEngine.html
@@ -56,6 +56,6 @@
     resizeCanvas();
   </script>
 
-  <script type="module" src="../Monkey-Engine/SpriteAnim2.0.js"></script>
+  <script type="module" src="../Monkey-Engine/Test.js"></script>
 </body>
 </html>
