--- a/Game_01_Ledvadva/index.html
+++ b/Game_01_Ledvadva/index.html
@@ -16,7 +16,7 @@
       margin: 0;
     }
   </style>
-  <script type="module" src="/Game_01_Ledvadva/main.js"></script>
+  <script type="module" src="../Game_01_Ledvadva/main.js"></script>
 </head>
 <body>
   <div id="externalCode"></div>
